<resources>
    <string name="app_name">WeatherForecast</string>

    <string name="date_sample">Суббота</string>
    <string name="temperature_sample">77</string>
    <string name="text_sample">Sample</string>
    <string name="time_sample">77:77</string>
    <string name="day">Днем</string>
    <string name="night">Ночью</string>
    <string name="measure">Measure</string>
    <string name="weather_image">Weather condition</string>
    
    <string name="mon">Понедельник</string>
    <string name="tue">Вторник</string>
    <string name="wed">Среда</string>
    <string name="thu">Четверг</string>
    <string name="fri">Пятница</string>
    <string name="sat">Суббота</string>
    <string name="sun">Воскресенье</string>

    <string name="rain">Дождь</string>
    <string name="clouds">Облачно</string>
    <string name="sunny">Ясно</string>
    <string name="wind_speed">Скорость ветра:  </string>
    <string name="pressure">Давление:  </string>
    <string name="cloudiness">Облачность:  </string>
    <string name="humidity">Влажность:  </string>
</resources>
