<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="7dp">
    <TextView
        android:id="@+id/description_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/date_size"
        android:text="@string/date_sample"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"/>

    <ImageView
        android:id="@+id/description_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/sun_huge"
        android:layout_below="@+id/description_date"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/weather_image"/>

    <TextView
        android:id="@+id/description_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/temperature_size"
        android:text="@string/temperature_sample"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/description_temp_night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/temperature_size"
        android:text="@string/temperature_sample"
        android:layout_alignBaseline="@+id/description_temp"
        android:layout_toEndOf="@+id/imageView3"
        android:textColor="@android:color/black"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/celsius"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/measure"
        android:layout_alignBottom="@+id/description_temp"
        android:layout_toEndOf="@+id/description_temp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/celsius"
        android:contentDescription="@string/measure"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toEndOf="@+id/description_temp_night" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sample"
        android:textSize="@dimen/description_text_size"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/description_image"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sample"
        android:textSize="@dimen/description_text_size"
        android:layout_below="@+id/description"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/clouds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sample"
        android:textSize="@dimen/description_text_size"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/humidity"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sample"
        android:textSize="@dimen/description_text_size"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/clouds"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sample"
        android:textSize="@dimen/description_text_size"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/speed"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/night"
        android:textSize="@dimen/description_text_size"
        android:layout_above="@+id/description_temp"
        android:layout_toEndOf="@+id/description_temp"
        android:layout_marginStart="25dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:textSize="@dimen/description_text_size"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/description_date"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"/>

</RelativeLayout>
